Fix True Retention table clipping on overflow (#3735)

--- a/ts/routes/graphs/_true-retention-base.scss
+++ b/ts/routes/graphs/_true-retention-base.scss
@@ -1,5 +1,8 @@
 table {
     border-collapse: collapse;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 tr {
